--- a/Develop/index.html
+++ b/Develop/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <!-- Header -->
     <div class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
@@ -24,6 +25,8 @@
             </ul>
         </div>
     </div>
+
+    <!-- Hero -->
     <div class="hero"></div>
     <div class="content">
         <div class="search-engine-optimization">
@@ -33,6 +36,8 @@
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </div>
+
+    <!-- Page Content Left -->
         <div class="online-reputation-management" class="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="Graph showing reputation increasing" />
             <h2>Online Reputation Management</h2>
@@ -48,6 +53,8 @@
             </p>
         </div>
     </div>
+
+    <!-- Page Contents Right -->
     <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
@@ -71,12 +78,15 @@
             </p>
         </div>
     </div>
+
+    <!-- Footer -->
     <footer>
         <h4>Made with ❤️️ by Horiseon</h4>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
     </footer>
+
 </body>
 
 </html>
