--- a/Develop/index.html
+++ b/Develop/index.html
@@ -28,6 +28,10 @@
 
     <!-- Hero -->
     <div class="hero"></div>
+    <!-- Hero Ends -->
+
+    <!-- Page Content Left -->
+
     <div class="content">
         <div class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Search engine optimization brainstorming in a notebook" />
@@ -37,15 +41,15 @@
             </p>
         </div>
 
-    <!-- Page Content Left -->
-        <div class="online-reputation-management" class="online-reputation-management">
+    
+        <div class="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="Graph showing reputation increasing" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </div>
-        <div class="social-media-marketing" class="social-media-marketing">
+        <div class="social-media-marketing">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="Social media buzzwords on a meeting table" />
             <h2>Social Media Marketing</h2>
             <p>
