--- a/Develop/index.html
+++ b/Develop/index.html
@@ -41,7 +41,6 @@
             </p>
         </div>
 
-    
         <div class="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right left-img" alt="Graph showing reputation increasing" />
             <h2 class="left-h2">Online Reputation Management</h2>
@@ -49,6 +48,7 @@
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </div>
+
         <div class="social-media-marketing">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left left-img" alt="Social media buzzwords on a meeting table" />
             <h2 class="left-h2">Social Media Marketing</h2>
@@ -61,22 +61,22 @@
     <!-- Page Contents Right -->
     <div class="benefits">
         <div class="benefit-lead">
-            <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" alt="Leads funnel" />
+            <h3 class="right-h3">Lead Generation</h3>
+            <img src="./assets/images/lead-generation.png" class="right-img" alt="Leads funnel" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
         <div class="benefit-brand">
-            <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" alt="Lightbulb moment" />
+            <h3 class="right-h3">Brand Awareness</h3>
+            <img src="./assets/images/brand-awareness.png" class="right-img" alt="Lightbulb moment" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
         <div class="benefit-cost">
-            <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" alt="Gears turning with money" />
+            <h3 class="right-h3">Cost Management</h3>
+            <img src="./assets/images/cost-management.png" class="right-img" alt="Gears turning with money" />
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
