--- a/Develop/index.html
+++ b/Develop/index.html
@@ -31,7 +31,7 @@
 
     <!-- Page Content Left -->
 
-    <div class="content">
+    <content class="content">
         <div class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left left-img" alt="Search engine optimization brainstorming in a notebook" />
             <h2 class="left-h2">Search Engine Optimization</h2>
@@ -55,10 +55,10 @@
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
         </div>
-    </div>
+    </content>
 
     <!-- Page Contents Right -->
-    <div class="benefits">
+    <benefits class="benefits">
         <div class="benefit-lead">
             <h3 class="right-h3">Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" class="right-img" alt="Leads funnel" />
@@ -80,7 +80,7 @@
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </div>
-    </div>
+    </benefits>
 
     <!-- Footer -->
     <footer>
