consolidated benefits margin font size and color to class left-content

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -59,21 +59,21 @@
 
     <!-- Page Contents Right -->
     <benefits class="benefits">
-        <div class="benefit-lead">
+        <div class="left-content">
             <h3 class="right-h3">Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" class="right-img" alt="Leads funnel" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
-        <div class="benefit-brand">
+        <div class="left-content">
             <h3 class="right-h3">Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" class="right-img" alt="Lightbulb moment" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
-        <div class="benefit-cost">
+        <div class="left-content">
             <h3 class="right-h3">Cost Management</h3>
             <img src="./assets/images/cost-management.png" class="right-img" alt="Gears turning with money" />
             <p>
