--- a/Develop/index.html
+++ b/Develop/index.html
@@ -32,7 +32,7 @@
     <!-- Page Content Left -->
 
     <content class="content">
-        <div class="search-engine-optimization">
+        <div class="left-content">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left left-img" alt="Search engine optimization brainstorming in a notebook" />
             <h2 class="left-h2">Search Engine Optimization</h2>
             <p>
@@ -40,7 +40,7 @@
             </p>
         </div>
 
-        <div class="online-reputation-management">
+        <div class="left-content">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right left-img" alt="Graph showing reputation increasing" />
             <h2 class="left-h2">Online Reputation Management</h2>
             <p>
@@ -48,7 +48,7 @@
             </p>
         </div>
 
-        <div class="social-media-marketing">
+        <div class="left-content">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left left-img" alt="Social media buzzwords on a meeting table" />
             <h2 class="left-h2">Social Media Marketing</h2>
             <p>
@@ -59,21 +59,21 @@
 
     <!-- Page Contents Right -->
     <benefits class="benefits">
-        <div class="left-content">
+        <div class="right-content">
             <h3 class="right-h3">Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" class="right-img" alt="Leads funnel" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
-        <div class="left-content">
+        <div class="right-content">
             <h3 class="right-h3">Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" class="right-img" alt="Lightbulb moment" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
-        <div class="left-content">
+        <div class="right-content">
             <h3 class="right-h3">Cost Management</h3>
             <img src="./assets/images/cost-management.png" class="right-img" alt="Gears turning with money" />
             <p>
