--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <nav class="header">
-        <h1>Hori<span class="seo">seo</span>n</h1>
+        <h1>Hori<seo id="seo">seo</seo>n</h1>
         <div>
             <ul>
                 <li>
